tests/sema/fail/v16_fail_adt_null_check_variant_field.ep
# COMPILE_FAIL: type Node has no common field name
type Leaf { name: str }
type Pair { value: i64 }
type Node = Leaf | Pair
fun main(): void {
    let n: Node = new Node(new Pair { value: 1 })
    if n.name? {
        println("unreachable")
    }
}
